History of this buildout
========================

5.0 - Plone 4 Branch (unreleased)
---------------------------------

- Let memmon check for a maximum memory of 2000 MB instead of 2560.
  [maurits]

- Added custom recent portlet, search portlet and linkedIn portlet
  [vincent]

- Changed text of email subscription notification so it correctly
  mentions an Event instead of a Hearing when that is the case.
  [maurits]

- Moved theming to Diazo [thomvl]

- Email from for EmailMixin objects is now specified in a portal
  property. [vincent]

- Manually commit the transaction after sending
  email. [vincent+maurits]

- Reactivated project reminder crontab, launched at midnight every
  tuesday and friday. [vincent]

- fixed caching for the meeting's location. [vincent]

- Configure blobs: in the postgres database.
  We cache them on clients in var/blobcache.
  [maurits]

- Update to plone 4.2.1.
  [maurits]

- Have a canonical list of skin layers for MinaraadTheme in
  Producst/minaraad/profiles/plone41/skins.xml.
  [maurits]

- Added a plone41 migration profile that is applied during an upgrade
  step of Products.minaraad.  Here we can put import steps that should
  be run once for the migration.  Currently just the skins.xml.  We
  add the new mina_styles layer only to the Minaraad Theme there.
  [maurits]

- Moved all css from the minaraad to the new mina_styles skin layer.
  [maurits]

- Fixed AttributeError when deleting a normal file from a meeting.
  Normal files do not have a contains_pdf method.
  [maurits]

- Configure blob storage.  Blobs are stored in postgres.  The zope
  instance caches them in var/blobcache.
  [maurits]

- Updated buildout config to Plone 4.1.2 and updated the code so the
  instance starts.  The TTW migration does not work yet.
  [maurits]


4.16 (2012-08-17)
-----------------

- Read HTTP_PROXY from the environment when running the buildout and
  add it to the generated zope.conf.  This avoids the problem the this