@@ -218,7 +218,7 @@ programs =
       30 varnish (exitcodes=0) ${buildout:directory}/bin/varnish [-p cli_timeout=10]
 #      40 maildrop ${buildout:bin-directory}/maildrop [start] true
 eventlisteners =
-      memmon TICK_60 ${buildout:bin-directory}/memmon [-p instance=2000MB]
+      memmon TICK_60 ${buildout:bin-directory}/memmon [-p instance=1300MB -s "python ${buildout:directory}/scripts/sendmail.py" -m m.van.rees@zestsoftware.nl]
 
 
 [crontab-start]
